--- a/styles/replayviewer.css
+++ b/styles/replayviewer.css
@@ -1,23 +1,3 @@
-.map-viewer #pause, .map-viewer #play {
-    position: absolute;
-    display: none;
-    opacity: 0.5;
-    z-index: 32;
-    width: 192px;
-    height: 192px;
-    left: 50%;
-    top: 50%;
-    margin: -96px;
-}
-
-.map-viewer #pause {
-    background-image: url(/GOKZReplayViewer/images/pause.png);
-}
-
-.map-viewer #play {
-    background-image: url(/GOKZReplayViewer/images/play.png);
-}
-
 .map-viewer .playback-bar {
     position: absolute;
     left: 0;
@@ -31,7 +11,7 @@
 
 .map-viewer .playback-bar .scrubber-container {
     position: absolute;
-    left: 96px;
+    left: 72px;
     right: 96px;
     top: 0;
     bottom: 0;
@@ -41,6 +21,23 @@
 .map-viewer .playback-bar .scrubber-container #scrubber {
     width: 100%;
     height: 36px;
+}
+
+.map-viewer .playback-bar #pause, .map-viewer .playback-bar #play {
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    left: 24px;
+    top: 8px;
+}
+
+.map-viewer .playback-bar #pause {
+    display: none;
+    background-image: url(/GOKZReplayViewer/images/pause.png);
+}
+
+.map-viewer .playback-bar #play {
+    background-image: url(/GOKZReplayViewer/images/play.png);
 }
 
 .map-viewer .message {
