--- a/styles/replayviewer.css
+++ b/styles/replayviewer.css
@@ -19,12 +19,12 @@
     vertical-align: middle;
 }
 
-.map-viewer .playback-bar .scrubber-container #scrubber {
+.map-viewer .playback-bar .scrubber-container .scrubber {
     width: 100%;
     height: 36px;
 }
 
-.map-viewer .playback-bar #time {
+.map-viewer .playback-bar .time {
     position: absolute;
     left: 40px;
     width: 96px;
@@ -34,7 +34,7 @@
     user-select: none;
 }
 
-.map-viewer .playback-bar #speed {
+.map-viewer .playback-bar .speed {
     position: absolute;
     right: 92px;
     width: 56px;
@@ -44,12 +44,12 @@
     user-select: none;
 }
 
-.map-viewer .playback-bar #speed:hover {
+.map-viewer .playback-bar .speed:hover {
     cursor: pointer;
     text-shadow: 0px 0px 4px rgba(255, 255, 255, 0.25);
 }
 
-.map-viewer .playback-bar #speed::before {
+.map-viewer .playback-bar .speed::before {
     content: "x";
 }
 
@@ -66,23 +66,23 @@
     filter: drop-shadow(0px 0px 4px rgba(255, 255, 255, 0.25));
 }
 
-.map-viewer .playback-bar #pause {
+.map-viewer .playback-bar .pause {
     display: none;
     left: 16px;
     background-image: url(/GOKZReplayViewer/images/pause.png);
 }
 
-.map-viewer .playback-bar #play {
+.map-viewer .playback-bar .play {
     left: 16px;
     background-image: url(/GOKZReplayViewer/images/play.png);
 }
 
-.map-viewer .playback-bar #settings {
+.map-viewer .playback-bar .settings {
     right: 56px;
     background-image: url(/GOKZReplayViewer/images/settings.png);
 }
 
-.map-viewer .playback-bar #fullscreen {
+.map-viewer .playback-bar .fullscreen {
     right: 16px;
     background-image: url(/GOKZReplayViewer/images/fullscreen.png);
 }
@@ -100,7 +100,7 @@
     background-color: rgba(15, 15, 15, 0.825);
 }
 
-.map-viewer .speed-control #speed-slider {
+.map-viewer .speed-control .speed-slider {
     width: 100%;
 }
 
